<resources>
    <string name="app_name">RestaurantsForMe</string>
    <string name="erreur">Check your Name &amp; Password</string>

    <string name="title_activity_maps">Map</string>
    <string name="forgotpass">Forgot password</string>
    <string name="saveUser">Save user</string>
    <string name="btnLog">LOGIN</string>
    <string name="password">Password</string>
    <string name="nom">Name</string>
    <string name="pizza">pizza</string>
    <string name="categorie_des_restaurants">Catégories Des Restaurants</string>
    <string name="login">Login</string>
    <string name="Liste_Restaurants">Liste des Restaurants</string>
</resources>